# Otus_4_Homework

./: CMakeLists.txt  Doxyfile  main.cpp  print.h
.github/workflows/: doxyfile.yaml  doxygen.yaml  doxygen.yml  realise.yaml  realise.yml
lib/: CMakeLists.txt
test/: CMakeLists.txt  test.cpp
